<resources>
    <string name="app_name">Attendance App</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="addLecture">Add Lecture</string>
    <string name="addKlass">Add Class</string>
    <string name="numofstudents">Students</string>
    <string name="klassName">Class Name</string>
    <string name="add">Add</string>
    <string name="add_new_klass">Add New Class</string>
    <string name="addNewLecture">Add New Lecture</string>
    <string name="selectClass">Select Class</string>
    <string name="delete">Delete</string>
    <string name="addAttendance">addAttendance</string>
    <string name="selectLecture">Select Lecture</string>
    <string name="modifyAttendance">Modify Attendance</string>
</resources>
