<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:gravity="center"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:weightSum="1">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"

        android:gravity="center"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/klassName"
            android:id="@+id/textView"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/editTextClassName"
            android:layout_toStartOf="@+id/editTextClassName"/>

        <EditText
            android:layout_width="106dp"
            android:layout_height="wrap_content"
            android:id="@+id/editTextClassName"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"

        android:gravity="center"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numofstudents"
            android:id="@+id/textView2"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <EditText
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/editText_numOfStudents"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/textView2"
            android:layout_toEndOf="@+id/textView2"/>
    </RelativeLayout>
    <Button
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:id="@+id/addKlassButton"
        android:layout_height="wrap_content"
        android:text="@string/addKlass"/>
</LinearLayout>