<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:gravity="center"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addNewLecture"
        android:textStyle="bold"
        android:textSize="40dp"
        android:layout_margin="30dp"
        />

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"

        android:gravity="center"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Subject"
            android:id="@+id/textView"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/editTextLectureName"
            android:layout_toStartOf="@+id/editTextLectureName"/>

        <EditText
            android:layout_width="106dp"
            android:layout_height="wrap_content"
            android:id="@+id/editTextLectureName"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectClass"
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Spinner
        android:layout_width="176dp"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_gravity="right"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textView3"
        android:layout_toEndOf="@+id/textView3"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"/>
</RelativeLayout>

    <Button
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:id="@+id/addKlassButton"
        android:layout_height="wrap_content"
        android:text="@string/addLecture"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>